--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header start  -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                   <img src="images/logo.png" alt="">
@@ -25,13 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -122,7 +122,7 @@
               </section>
 
             <!-- shoes section start  -->
-            <section class="container my-5">
+            <section class="container my-5" id="shoes">
               <h1>Shoes</h1>
               <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -171,7 +171,7 @@
             </section>
             <!-- backpack start  -->
 
-            <section class="container">
+            <section class="container" id="backpack">
               <h1>Backpack</h1>
               <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -216,7 +216,7 @@
               </div>
             </section>
             <!-- subscribe -->
-            <section style="height: 300px; background-color: #FCEAE8;" class="container my-5 d-flex justify-content-center align-items-center rounded-3">
+            <section id="subscribe" style="height: 300px; background-color: #FCEAE8;" class="container my-5 d-flex justify-content-center align-items-center rounded-3">
                 <div>
                   <h1>LET'S STAY IN TOUCH</h1>
                   <p class="text-muted"><strong> Get updates on sales, specials and more</strong></p>
