--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Panda-Commerce-Bootstrap</title>
     <!-- bootstrap style sheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom style sheet  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- header start  -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container nav-bg-color rounded-3 p-2 mb-5">
               <a class="navbar-brand" href="#">
                   <img src="images/logo.png" alt="">
               </a>
@@ -39,7 +41,7 @@
           </nav>
 
           <!-- slider start  -->
-          <section class="container rounded-3 my-5" style="background-color: #FCEAE8;">
+          <section class="container rounded-3 my-5 panda-bg-color" >
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -48,7 +50,7 @@
                                 <h1>Cool Dude Headphone </h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world. </p>
                                 <h1>$420</h1>
-                                <div class="btn btn-danger ">Buy now</div>
+                                <div class="btn panda-all-btn ">Buy Now</div>
                           </div>
                           <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -62,7 +64,7 @@
                               <h1>Mega LCD TV For Sports </h1>
                               <p>This is the best tv in the world for people who just want to waste time in front of tv. </p>
                               <h1>$1200</h1>
-                              <div class="btn btn-danger ">Buy now</div>
+                              <div class="btn panda-all-btn ">Buy Now</div>
                         </div>
                         <div class="col-lg-5">
                           <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -75,7 +77,7 @@
                               <h1>X-Box for your living room  </h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports. </p>
                               <h1>$600</h1>
-                              <div class="btn btn-danger ">Buy now</div>
+                              <div class="btn panda-all-btn ">Buy Now</div>
                         </div>
                         <div class="col-lg-5">
                           <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -101,19 +103,19 @@
            
                 <div class="row g-5 ">
                   <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border rounded-3 bg-warning d-flex justify-content-between align-items-center">
+                    <div class="p-3 border rounded-3 bg-categories-1 d-flex justify-content-between align-items-center">
                         <h1>Watch</h1>
                         <img width="100" height="100" src="images/categories/watch.png" alt="">
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border rounded-3 bg-success d-flex justify-content-between align-items-center">
+                    <div class="p-3 border rounded-3 bg-categories-2 d-flex justify-content-between align-items-center">
                         <h1>Bag</h1>
                         <img width="100" height="100" src="images/categories/bag.png" alt="">
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border rounded-3 bg-primary d-flex justify-content-between align-items-center">
+                    <div class="p-3 border rounded-3 bg-categories-3 d-flex justify-content-between align-items-center">
                         <h1>Shoes</h1>
                         <img width="100" height="100" src="images/categories/shoes.png" alt="">
                     </div>
@@ -135,7 +137,7 @@
                     </div>
                     <div class="m-3">
                       <h5>$120</h5>
-                      <div class="btn btn btn-danger">Buy Now</div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
@@ -149,7 +151,7 @@
                     </div>
                     <div class="m-3">
                       <h5>$320</h5>
-                      <div class="btn btn btn-danger">Buy Now</div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
@@ -163,7 +165,7 @@
                     </div>
                     <div class="m-3">
                       <h5>$350</h5>
-                      <div class="btn btn btn-danger">Buy Now</div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
@@ -183,7 +185,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn btn-danger">Buy Now > ></div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
@@ -196,7 +198,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn btn-danger">Buy Now > ></div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
@@ -209,27 +211,27 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn btn-danger">Buy Now > ></div>
+                      <div class="btn panda-all-btn">Buy Now > ></div>
                     </div>
                   </div>
                 </div>
               </div>
             </section>
             <!-- subscribe -->
-            <section id="subscribe" style="height: 300px; background-color: #FCEAE8;" class="container my-5 d-flex justify-content-center align-items-center rounded-3">
+            <section id="subscribe" class="container panda-bg-color my-5 d-flex justify-content-center align-items-center rounded-3">
                 <div>
                   <h1>LET'S STAY IN TOUCH</h1>
                   <p class="text-muted"><strong> Get updates on sales, specials and more</strong></p>
                     <input type="email" class="form-control" placeholder="Enter Your Email">
                   <br>
-                  <button class="btn btn-danger">
+                  <button class="panda-all-btn">
                       SUBMIT
                   </button>
                 </div>
             </section>
     </main>
     <footer class="mt-5 text-center">
-      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+      <p><small>©2021. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <!-- bootstrap scripts -->
