--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           </nav>
 
           <!-- slider start  -->
-          <section class="container rounded-3 my-5 panda-bg-color" >
+          <section class="container rounded-3 my-5 " >
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="row p-5 d-flex align-items-center">
+                      <div class="row panda-bg-color p-5 d-flex align-items-center">
                           <div class="col-lg-7">
                                 <h1>Cool Dude Headphone </h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world. </p>
@@ -59,7 +59,7 @@
                     
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 d-flex align-items-center">
+                    <div class="row panda-bg-color p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                               <h1>Mega LCD TV For Sports </h1>
                               <p>This is the best tv in the world for people who just want to waste time in front of tv. </p>
@@ -72,7 +72,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 d-flex align-items-center">
+                    <div class="row panda-bg-color rounded-3 p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                               <h1>X-Box for your living room  </h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports. </p>
